--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <!-- clmtrackr -->
   <script src="https://unpkg.com/clmtrackr@1.1.2/build/clmtrackr.min.js"></script>
 
+  <!-- Supabase (Storage 업로드용) -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+  <!-- QR 생성 라이브러리 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.js"></script>
+ 
   <link rel="stylesheet" type="text/css" href="style.css" />
 
   <style>
@@ -63,4 +69,3 @@
   <script src="stage4_QR.js"></script>
 </body>
 </html>
-
